# cyclework

./: README.md  pyproject.toml
cyclework/: __init__.py  engine.py  examples.py  trace.py  verdict.py
demos/: 01_agent_retry_loop.py  02_numeric_solvers.py  03_plateau_and_budget.py  04_feedback_refiner.py  05_streaming_observability.py  06_error_recovery.py  07_gradient_descent.py  08_text_normalizer.py  09_misuse_guards.py  10_collatz_and_budget.py  11_seed_preprocessing.py  12_plateau_early_stop.py  13_streaming_audit_log.py  14_state_is_anything.py  15_retry_with_backoff.py  16_constraint_repair.py  17_best_of_nonconvergent.py  18_iterative_summarizer.py  19_two_forms_compared.py  20_newton_vs_bisection.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
tests/: test_demos.py  test_engine.py  test_engine_edge.py  test_examples.py  test_examples_edge.py  test_verdict_trace.py
