[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclework"
version = "0.1.0"
description = "A tiny, dependency-free engine for iterative refinement loops: propose, check, revise, repeat."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{ name = "Cognis Digital" }]
keywords = ["iteration", "refinement", "convergence", "optimization", "agent-loop", "control-loop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/cognis-digital/cyclework"

[tool.setuptools]
packages = ["cyclework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
